2013-01-11  Andy Buckley  <andy.buckley@cern.ch>

	* Renaming LHAPDFConfig.h -> Config.h

	* DESIGN doc updates.

	* Factory renaming and adding factory functions for PDF construction.

	* PDF and PDFInfo extra constructors from LHAPDF ID code.

	* Moving PDFInfo YAML reading into a new PDFInfo.cc to avoid an API header dependency.

	* Refactoring PDF filename construction etc. to minimise code duplication.

	* Adding the PDFIndex.h header and index lookup functions.

	* Adding the start of the LHA Fortran wrapper, based on the Py8
	wrapper by Steve and Martin.

2013-01-10  Andy Buckley  <andy.buckley@cern.ch>

	* More PDFGrid data loading development: improvements to the API
	and the data parser now works.

	* Adding the error extrapolator to the extrapolator factory function.

2013-01-09  Andy Buckley  <andy.buckley@cern.ch>

	* A few tweaks to the info/data loader system: PDF loading from
	set name + member ID with cascading info/set/config levels WORKS!

	* Adding more constructors for PDFGrid, calling the new ones on
	PDF to populate the Info class.

	* Adding the EXAMPLEPDF directory for testing.

2013-01-08  Andy Buckley  <andy.buckley@cern.ch>

	* Adding example lhapdf.conf.

	* Inlining, clean-up and other tweaks.

	* Adding PDF base constructors with loading apparatus for info
	from member files + discovery and loading of set-level info.

2013-01-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding to_str variants for both single objects and for vectors
	of objects which are convertible to string via lexical_cast.

	* Adding the YAML parser operation to the Info class (and its subclasses).

	* Removing Types.h in favour of split Utils.h and Exceptions.h

	* include/LHAPDF/Paths.h: Adding path searching machinery (using Boost.Filesystem).

2013-01-02  Andy Buckley  <andy.buckley@cern.ch>

	* Adding some of the necessary infrastructure for subgrids, and
	rewriting the grid format parser to handle separated subgrid