@@ -1,25 +1,18 @@
-# TODO: LHAPDFConfig.h -> LHAPDF/Config.h
-# TODO: Types.h -> Utils.h, remove int, and merge in version functions
-# TODO: Make separate Errors.h/Exceptions.h header
-# TODO: Put path functions in utils or a special Paths.h?
 # TODO: Provide a convenience LHAPDF.h to include all the main API elements?
 
 pkginclude_HEADERS = \
   PDF.h \
+  Info.h \
+  Config.h \
+  Utils.h \
+  Paths.h \
+  Exceptions.h \
+  Factories.h \
   PDFGrid.h \
   Interpolator.h \
   Extrapolator.h \
-  AlphaS.h \
-  LHAPDFConfig.h \
-  Utils.h \
-  Exceptions.h \
-  Version.h \
-  Factories.h \
-  NearestPointExtrapolator.h \
   BicubicInterpolator.h \
   BilinearInterpolator.h \
-  ErrExtrapolator.h
-#  PDFSet.h
-
-noinst_HEADERS = \
-  PDFInfo.h
+  ErrExtrapolator.h \
+  NearestPointExtrapolator.h \
+  AlphaS.h
