@@ -1,5 +1,7 @@
 2013-01-11  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Renaming PDFInfo.h/.cc to just Info.h/.cc
+
 	* Renaming LHAPDFConfig.h -> Config.h
 
 	* DESIGN doc updates.
